--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ build
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-
+/backend/post_cmd.txt
+/backend/pre_cmd.txt
+/backend/tmp
 *storybook.log
