--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 *storybook.log
 package-lock.json
+/backend/tmp
+/backend/pre_cmd.txt
+/backend/post_cmd.txt
