--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "Monorepo for Rubikon",
 	"scripts": {
-		"start": "concurrently \"cd frontend && npm run dev\" \"cd backend && go run server.go\""
+		"start": "concurrently \"cd frontend && npm run dev\" \"cd backend && docker compose up\""
 	},
 	"devDependencies": {
 		"concurrently": "^8.2.2"
