--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,11 @@
   },
   "type": "module",
   "dependencies": {
-    "clerk-sveltekit": "^0.4.1"
+    "bits-ui": "^0.20.1",
+    "clerk-sveltekit": "^0.4.1",
+    "clsx": "^2.1.0",
+    "svelte-radix": "^1.1.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwind-variants": "^0.2.1"
   }
 }
