--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,9 @@
     "bits-ui": "^0.20.1",
     "clerk-sveltekit": "^0.4.1",
     "clsx": "^2.1.0",
+    "mode-watcher": "^0.3.0",
     "svelte-radix": "^1.1.0",
+    "svelte-sonner": "^0.3.19",
     "tailwind-merge": "^2.2.2",
     "tailwind-variants": "^0.2.1"
   }
